CORE(fix): Created Button Comps
TODO: fix droplet effect and composition API

--- a/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/base/_variable.scss
+++ b/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/base/_variable.scss
@@ -3,6 +3,10 @@ $primary-color: #F0F1A5;
 $primary-hover: #ECED68;
 $secondary-color: #D8DFE9;
 $secondary-hover: #C2BFF8;
+$cc-dark-btn: #212121;
+$cc-light-btn: #F7F6FB;
+$cc-danger: #df1d2d;
+$cc-danger-hover: #d85863;
 $ghost-color: transparent;
 $text-dark: #212121;
 $text-light: #F7F6FB;
