--- a/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/components/_buttons.scss
+++ b/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/components/_buttons.scss
@@ -81,7 +81,8 @@
 
   &--lg {
     font-size: 1.125rem;
-    width: 32.75rem;
+    min-width: 32.75rem;
+    width: 100%;
     padding: 0.75rem 1.5rem;
   }
 }
