--- a/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/components/_dropdowns.scss
+++ b/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/components/_dropdowns.scss
@@ -8,6 +8,7 @@
   font-weight: bolder;
   transition: all 0.2s ease;
   width: 100%;
+  height: 2.75rem;
   padding: 0.5rem 1rem;
   text-transform: uppercase;
   border: none;
