CORE(pages): Creating lecturer dashboard page

--- a/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/base/_variable.scss
+++ b/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/base/_variable.scss
@@ -1,8 +1,8 @@
 
 $primary-color: #F0F1A5;
 $primary-hover: #ECED68;
-$secondary-color: #D8DFE9;
-$secondary-hover: #C2BFF8;
+$secondary-color: #D0DFCC;
+$secondary-hover: #b4d4ab;
 $cc-dark-btn: #212121;
 $cc-light-btn: #F7F6FB;
 $cc-danger: #df1d2d;
