--- a/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/components/_dropdowns.scss
+++ b/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/components/_dropdowns.scss
@@ -5,12 +5,11 @@
   appearance: none; // Removes native styling for consistency
   border-radius: 1.25rem;
   margin: 0.25rem;
-  font-weight: bolder;
+  font-weight: 400;
   transition: all 0.2s ease;
   width: 100%;
-  height: 2.75rem;
+  height: 2.2rem;
   padding: 0.5rem 1rem;
-  text-transform: uppercase;
   border: none;
   background-color: white;
   color: $text-dark;
