--- a/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/components/_dropdowns.scss
+++ b/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/components/_dropdowns.scss
@@ -7,6 +7,7 @@
   margin: 0.25rem;
   font-weight: 400;
   transition: all 0.2s ease;
+  font-size: 14px;
   width: 100%;
   height: 2.2rem;
   padding: 0.5rem 1rem;
