--- a/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/components/_dropdowns.scss
+++ b/CodeCloudSchool-app/src/CCSchool-vue/src/assets/styles/components/_dropdowns.scss
@@ -7,8 +7,9 @@
   margin: 0.25rem;
   font-weight: 400;
   transition: all 0.2s ease;
-  font-size: 14px;
+  font-size: 12px;
   width: 100%;
+  min-width: 9rem;
   height: 2.2rem;
   padding: 0.5rem 1rem;
   border: none;
@@ -17,18 +18,18 @@
 
   // Size variants
   &--sm {
-    font-size: 0.875rem;
-    width: 7.125rem;
+    font-size: 12px;
+    width: 9.125rem;
     padding: 0.375rem 0.75rem;
   }
 
   &--md {
-    font-size: 1rem;
+    font-size: 14px;
     width: 16.175rem;
   }
 
   &--lg {
-    font-size: 1.125rem;
+    font-size: 16px;
     width: 32.75rem;
     padding: 0.75rem 1.5rem;
   }
